SAK-23907 removing references to sakai.*.version so maven dependency management is used instead
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@129649 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-impl/impl/pom.xml
+++ b/chat-impl/impl/pom.xml
@@ -7,6 +7,7 @@
     <version>2.10-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
+
   <name>sakai-chat-impl</name>
   <groupId>org.sakaiproject</groupId>
   <artifactId>sakai-chat-impl</artifactId>
@@ -19,6 +20,7 @@
   <properties>
     <deploy.target />
   </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.sakaiproject.kernel</groupId>
@@ -69,6 +71,7 @@
       <artifactId>entitybroker-api</artifactId>
     </dependency>
     <dependency>
+      <!-- remove this - https://jira.sakaiproject.org/browse/SAK-23916 -->
       <groupId>org.sakaiproject.message</groupId>
       <artifactId>sakai-message-impl</artifactId>
     </dependency>
