--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,7 @@
   <artifactId>chat-base</artifactId>
   <version>2.10-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <scm>
-    <connection>scm:svn:https://source.sakaiproject.org/svn/chat/trunk</connection>
-    <developerConnection>scm:svn:https://source.sakaiproject.org/svn/chat/trunk</developerConnection>
-    <url>https://source.sakaiproject.org/svn/chat/trunk</url>
-  </scm>
+
   <modules>
     <module>chat-api/api</module>
     <module>chat-help</module>
@@ -24,60 +20,30 @@
     <module>chat-impl/pack</module>
     <module>chat-tool/tool</module>
   </modules>
+
+  <scm>
+    <connection>scm:svn:https://source.sakaiproject.org/svn/chat/trunk</connection>
+    <developerConnection>scm:svn:https://source.sakaiproject.org/svn/chat/trunk</developerConnection>
+    <url>https://source.sakaiproject.org/svn/chat/trunk</url>
+  </scm>
+
   <dependencyManagement>
     <dependencies>
       <dependency>
-       <groupId>org.sakaiproject</groupId>
-        <artifactId>sakai-chat-api</artifactId>
-        <version>${project.version}</version>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
         <groupId>org.sakaiproject.message</groupId>
         <artifactId>sakai-message-impl</artifactId>
-        <version>${sakai.message.version}</version>
+        <version>2.10-SNAPSHOT</version><!-- hardcoded workaround until https://jira.sakaiproject.org/browse/SAK-23916 is fixed -->
+      </dependency>
+      <dependency>
+        <groupId>org.sakaiproject</groupId>
+        <artifactId>sakai-chat-api</artifactId>
+        <version>${project.version}</version>
+	<scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>org.sakaiproject</groupId>
         <artifactId>sakai-chat-impl</artifactId>
         <version>${project.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.sakaiproject.presence</groupId>
-        <artifactId>sakai-presence-util</artifactId>
-        <version>${sakai.presence.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.sakaiproject.courier</groupId>
-        <artifactId>sakai-courier-util</artifactId>
-        <version>${sakai.courier.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.sakaiproject.site</groupId>
-        <artifactId>sakai-mergedlist-util</artifactId>
-        <version>${sakai.site.version}</version>
-      </dependency>
-<!-- JSF dependencies -->
-      <dependency>
-        <groupId>org.sakaiproject.jsf</groupId>
-        <artifactId>jsf-tool</artifactId>
-        <version>${sakai.jsf.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.sakaiproject.jsf</groupId>
-        <artifactId>jsf-app</artifactId>
-        <version>${sakai.jsf.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.sakaiproject.jsf</groupId>
-        <artifactId>jsf-widgets-sun-depend</artifactId>
-        <version>${sakai.jsf.version}</version>
-        <type>pom</type>
-      </dependency>
-      <dependency>
-        <groupId>org.sakaiproject.velocity</groupId>
-        <artifactId>sakai-velocity-tool</artifactId>
-        <version>${sakai.velocity-tool.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
