SAK-24207 Add optional start and end date controls for chat rooms in the chat tool
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@129909 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/pom.xml
+++ b/chat-tool/tool/pom.xml
@@ -86,6 +86,11 @@
       <version>1.1.10</version>
       <scope>compile</scope>
     </dependency>
+    <!-- Needed by MyFaces ExtensionsFilter -->
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+    </dependency>
     <dependency>
       <groupId>commons-digester</groupId>
       <artifactId>commons-digester</artifactId>
