--- a/chat-tool/tool/src/bundle/chat.properties
+++ b/chat-tool/tool/src/bundle/chat.properties
@@ -68,6 +68,24 @@ custom.use3 = Use a new Chat Room
 custom.which  = Which chat room will be displayed?
 custom.called = called
 custom.msgdisp = Message Display
+## added for dates limiting (https://jira.sakaiproject.org/browse/SAK-24207)
+custom_date_display=Posting allowed from {0} through {1}
+custom_date_display_start=Posting allowed starting {0}
+custom_date_display_end=Posting allowed through {1}
+custom_date_heading=Allowed Posting Dates
+custom_date_instructions=Users are allowed to post to the chatroom between the dates specified below. \
+Leaving or setting a date blank indicates no date restriction (only the permissions would limit posting). \
+The end date must be the same as or later than the start date.
+custom_date_start=Start
+custom_date_end=End
+custom_date_restricted=Posting is currently disabled by configured dates.
+custom_date_error_order=Start date ({0}) must come before end date ({1})
+# for the date picker
+custom_date_entry_format_description=(mm/dd/yy)
+custom_date_entry_today_is=Today is
+custom_date_entry_week_header=Wk
+custom_date_entry_format=MM/dd/yy
+custom_date_entry_goto=Go To Current Month
 
 
 #Delete Vm
