--- a/chat-impl/impl/pom.xml
+++ b/chat-impl/impl/pom.xml
@@ -84,6 +84,10 @@
       <artifactId>sakai-courier-util</artifactId>
     </dependency>
     <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+    </dependency>
+    <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
     </dependency>
