--- a/chat-tool/tool/src/webapp/WEB-INF/web.xml
+++ b/chat-tool/tool/src/webapp/WEB-INF/web.xml
@@ -66,7 +66,10 @@
     </listener>
     
 	<!-- the faces handling xml -->
-	
+    <context-param>
+        <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
+        <param-value>client</param-value>
+    </context-param>
     <context-param>
         <param-name>com.sun.faces.validateXml</param-name>
         <param-value>true</param-value>
