--- a/chat-tool/tool/pom.xml
+++ b/chat-tool/tool/pom.xml
@@ -73,6 +73,10 @@
       <groupId>org.sakaiproject.jsf</groupId>
       <artifactId>jsf-app</artifactId>
     </dependency>
+    <dependency>
+        <groupId>org.sakaiproject.portal</groupId>
+        <artifactId>sakai-portal-util</artifactId>
+    </dependency>
 <!-- this will pull the correct dependency set for a Sun Widget Set -->
     <dependency>
       <groupId>org.sakaiproject.jsf</groupId>
